add capybara-logo.png, style the header

--- a/reset.css
+++ b/reset.css
@@ -13,6 +13,7 @@ https://www.joshwcomeau.com/css/custom-css-reset/
   */
   * {
     margin: 0;
+    padding: 0;
   }
   /*
     Typographic tweaks!
