--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
     margin: 0 auto;
 }
 
-.header, .hero{
+.header, .hero-container{
     background-color: #1F2937;
 }
 
 .header img {
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     filter: invert(100%) sepia(0%) saturate(4%) hue-rotate(207deg) brightness(105%) contrast(100%); /*converts the png into white (too lazy to photoshop it)*/
 }
 
@@ -22,13 +22,50 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding: 16px 600px;
+    flex-wrap: wrap;
 }
 
 .links {
     display: flex;
+    flex-wrap: wrap;
     color:  #E5E7EB;
     font-size: 18px;;
     list-style: none;
     gap: 18px
+}
+
+.hero-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 64px 600px;
+}
+
+.hero {
+    width: 600px;
+}
+
+.hero-container img {
+    width: 500px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+p {
+    font-size: 18px;
+    color: #F9FAF8;
+    margin-bottom: 20px;
+}
+
+button {
+    padding: 8px 32px;
+    border-radius: 8px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    cursor: pointer;
+    border: none;
 }
