--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     color:  #E5E7EB;
-    font-size: 18px;;
+    font-size: 18px;
     list-style: none;
     gap: 18px
 }
