--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h1 {
     color: #F9FAF8;
 }
 
-p {
+.hero p {
     font-size: 18px;
     color: #F9FAF8;
     margin-bottom: 20px;
@@ -69,4 +69,29 @@ button {
     color: #F9FAF8;
     cursor: pointer;
     border: none;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    padding: 20px 0px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+
+.cards li {
+    width: 200px;
+    list-style: none;
+    text-align: center;
+}
+
+.cards img {
+    width: 200px;
+    height: 200px;
 }
