--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h2 {
     width: 250px;
     list-style: none;
     text-align: center;
+    margin-bottom: 50px;;
 }
 
 .cards img {
@@ -100,4 +101,25 @@ h2 {
     margin-bottom: 10px;
     border: 5px solid #3882f6;
     border-radius: 20px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    padding: 50px;
+}
+
+.quote p {
+    font-size: 26px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+    text-align: justify;
+    width: 700px;
+    margin: 0 auto;
+}
+
+h3 {
+    margin: 0 auto;
+    width: 700px;
+    text-align: end;
 }
